--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,4 +7,10 @@
 <h2>Users</h2>
 <p><a href="/users">View all users</a></p>
 
+<h2>Register Here</h2>
+<p><a href="/registration">Register Here!</a></p>
+
+<h2>Login Here</h2>
+<p><a href="/login">Login Here!</a></p>
+
 {% endblock %}
