--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,27 @@
 </head>
 <body>
   Ratings
+
+
+
+{% if "user_id" in session %}
+	<div display: inline-block>
+	 <form action="/">
+	  <input type="submit" name="loggedOut" value="Log Out">
+	</form>	
+
+	</div>
+
+{% else %}
+
+	<div display: inline-block>
+	 <form action="/login">
+	  <input type="submit" name="loggedIn" value="Log In">
+	</form>	
+
+	</div>
+{% endif %}
+
   <hr>
 
   <div class="flashes">
@@ -12,7 +33,7 @@
     {{ message }}
   {% endfor %}
   </div>
-  
+
   {% block content %}{% endblock %}
 
 </body>
